# QQTip

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: start.sh  stop.sh
src/: CMakeLists.txt  config.cppm  event.cppm  json.cppm  listen.cppm  main.cpp  message.cppm  time.cppm  timer.cppm  tip_task_manager.cppm  tools.cppm
